--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -10,6 +10,12 @@
         <div class="uk-section">
             <div class="uk-container uk-container-small">
                 <h2 class="uk-heading-line uk-text-center"><span>Let's fight lung cancer, <strong>together</strong>.</span></h2>
+                <div class="uk-text-justify">
+                    <p>Competitions like the <a href="https://www.kaggle.com/c/data-science-bowl-2017/data">Data Science Bowl 2017</a> and <a href="https://luna16.grand-challenge.org/">LUNA16</a> are empowering the community to aid in the fight against lung cancer in ways like never before.</p>
+
+                    <p><a href="https://github.com/2PacIsAlive/DeepOncology">DeepOncology</a> is an open-source platform for lung cancer detection, designed to be easy to understand, extensible, and powerful. With the power of deep learning at <strong>your</strong> fingertips, who knows what progress we might make.</p>
+                </div>
+                <hr>
                 <button id="show-network-builder" class="uk-button uk-button-primary uk-width-1-1 uk-margin-small-bottom">Get started</button>
                 {{ events.on_click_show("#show-network-builder", "#network-builder") }}
             </div>
@@ -25,6 +31,7 @@
                     <p class="uk-margin-small-bottom">Once you choose hope, anything’s possible.</p>
                     <footer><cite>Christopher Reeve</cite></footer>
                 </blockquote>
+                <p class="uk-text-right uk-text-meta"><small>Made with ❤ by <a href="https://github.com/2PacIsAlive">Jared Jolton</a></small></p>
             </div>
         </div>
     </body>
