--- a/www/templates/navbar.html
+++ b/www/templates/navbar.html
@@ -1,7 +1,7 @@
 {% macro navbar() -%}
   	<nav class="uk-navbar-container uk-navbar-transparent" uk-navbar>
         <div class="uk-navbar-left">
-            <a class="uk-navbar-item uk-logo" href="/">Deep Oncology</a>
+            <a class="uk-navbar-item uk-logo" href="/"><strong>Deep</strong> Oncology</a>
         </div>
     </nav>
 {%- endmacro %}
