--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -16,16 +16,12 @@
                     <p><a href="https://github.com/2PacIsAlive/DeepOncology">DeepOncology</a> is an open-source platform for lung cancer detection, designed to be easy to understand, extensible, and powerful. With the power of deep learning at <strong>your</strong> fingertips, who knows what progress we might make.</p>
                 </div>
                 <hr>
-                <button id="show-network-builder" class="uk-button uk-button-primary uk-width-1-1 uk-margin-small-bottom">Get started</button>
-                {{ events.on_click_show("#show-network-builder", "#network-builder") }}
+                <button class="uk-button uk-button-primary uk-width-1-1 uk-margin-small-bottom" onclick="window.location.href='/build'">
+                    Get started
+                </button>
             </div>
         </div>
-        <div id="network-builder" class="uk-section uk-section-muted uk-preserve-color">
-            <div class="uk-container">
-                {{ network.builder() }}
-            </div>
-        </div>
-        <div class="uk-section uk-section-secondary">
+        <div class="uk-section uk-section-small uk-section-secondary">
             <div class="uk-container uk-container-small">
                 <blockquote cite="">
                     <p class="uk-margin-small-bottom">Once you choose hope, anything’s possible.</p>
