--- a/www/templates/events.html
+++ b/www/templates/events.html
@@ -43,6 +43,14 @@
 								pos: 'top-right',
 								timeout: 5000
 							});
+						},
+						500: function(data) {
+							UIkit.notification({
+								message: "Something bad happened!",
+								status: 'danger',
+								pos: 'top-right',
+								timeout: 5000
+							});
 						}
 					}
         		});
