deep_oncology -> deep_networks (deepnet.works)

--- a/www/templates/navbar.html
+++ b/www/templates/navbar.html
@@ -1,12 +1,12 @@
 {% macro navbar() -%}
   	<nav class="uk-navbar-container uk-dark" uk-navbar>
         <div class="uk-navbar-left">
-            <a class="uk-navbar-item uk-logo" href="/"><strong>Deep</strong> Oncology</a>
+            <a class="uk-navbar-item uk-logo uk-text-uppercase" href="/">Deep <strong>Networks</strong></a>
         </div>
         <div class="uk-navbar-right">
             <a class="uk-navbar-item uk-text-uppercase" href="/build">build</a>
             <a class="uk-navbar-item uk-text-uppercase" href="/train">train</a>
-            <a class="uk-navbar-item uk-text-uppercase" href="/contribute">contribute</a>
+            <a class="uk-navbar-item uk-text-uppercase" href="/hack">hack</a>
         </div>
     </nav>
 {%- endmacro %}
