--- a/www/templates/head.html
+++ b/www/templates/head.html
@@ -2,7 +2,9 @@
   	<head>
         <title>Deep Oncology</title>
 		<link rel="stylesheet" href="/css/uikit.min.css" />
+		<link rel="stylesheet" href="/css/style.css" />
 		<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 		<script src="/js/uikit.min.js"></script>
+		<script src="/js/typed.js"></script>
 	</head>
 {%- endmacro %}
