hack on network config

--- a/www/templates/build.html
+++ b/www/templates/build.html
@@ -36,8 +36,8 @@
         <div class="uk-section uk-section-xsmall uk-section-secondary">
             <div class="uk-container uk-container-small">
                 <blockquote cite="">
-                    <p class="uk-margin-small-bottom"><small>I can answer the question, but am I bright enough to ask it?</small></p>
-                    <footer><small><cite><a href="https://twitter.com/edge">John Brockman</a></cite></small></footer>
+                    <p class="uk-margin-small-bottom"><small>TODO nice quote</small></p>
+                    <footer><small><cite><a href="">TODO some guy/gal</a></cite></small></footer>
                 </blockquote>
             </div>
         </div>
