--- a/www/templates/head.html
+++ b/www/templates/head.html
@@ -1,6 +1,6 @@
 {% macro head() -%}
   	<head>
-        <title>Deep Oncology</title>
+        <title>deep networks</title>
 		<link rel="stylesheet" href="/css/uikit.min.css" />
 		<link rel="stylesheet" href="/css/style.css" />
 		<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
