--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -14,33 +14,31 @@
                       $('.typed-cursor').remove();
                       $(".element").typed({
                         strings: [
-                            "made <strong>easier</strong>.",
-                            "but <strong>more fun</strong>.",
-                            "with <strong>less work</strong>.",
-                            "made <strong>sexier</strong>.",
-                            "with <strong>more abstraction</strong>."
+                            "made ^<strong>easier</strong>.",
+                            "but ^<strong>more fun</strong>.",
+                            "with ^<strong>less work</strong>.",
+                            "made ^<strong>sexier</strong>.",
+                            "with ^<strong>more abstraction</strong>."
                         ],
-                        typeSpeed: 75,
+                        typeSpeed: 85,
                         backSpeed: 20,
                         loop: true,
                         startDelay: 0,
                         backDelay: 1500,
-                        showCursor: false,
+                        showCursor: true,
                         shuffle: true
                       });
                   });
                 </script>
-                <!--<h2 class="uk-heading-line uk-text-center"><span>Deep learning,<br> <strong><div class="element"></div></strong></span></h2>-->
-                <div class="uk-padding uk-container uk-container-small">
+                <div class="uk-container uk-container-small">
                     <h2 class="uk-display-inline-block uk-text-center">Deep learning, <span class="element"></span></h2>
                 </div>
                 <br>
-                <div class="uk-text-justify">
-                    <p>Competitions like the <a href="https://www.kaggle.com/c/data-science-bowl-2017/data">Data Science Bowl 2017</a> and <a href="https://luna16.grand-challenge.org/">LUNA16</a> are empowering the community to aid in the fight against lung cancer in ways like never before.</p>
-
-                    <p><a href="https://github.com/2PacIsAlive/DeepOncology">DeepOncology</a> is an open-source platform for lung cancer detection, designed to be easy to understand, extensible, and powerful. With the power of deep learning at <strong>your</strong> fingertips, who knows what progress we might make.</p>
+                <div class="uk-column-1-2 uk-column-divider uk-text-justify">
+                    <p>TODO here will be some text about building networksTODO here will be some text about building networksTODO here will be some text about building networks</p>
+                    <p>TODO here will be some text about training networksTODO here will be some text about training networksTODO here will be some text about training networks</p>
                 </div>
-                <hr>
+                <hr class="uk-divider-icon">
                 <button class="uk-button uk-button-primary uk-width-1-1 uk-margin-small-bottom" onclick="window.location.href='/build'">
                     Get started
                 </button>
@@ -49,8 +47,8 @@
         <div class="uk-section uk-section-small uk-section-secondary">
             <div class="uk-container uk-container-small">
                 <blockquote cite="">
-                    <p class="uk-margin-small-bottom">Once you choose hope, anything’s possible.</p>
-                    <footer><cite>Christopher Reeve</cite></footer>
+                    <p class="uk-margin-small-bottom"><small>I can answer the question, but am I bright enough to ask it?</small></p>
+                    <footer><small><cite><a href="https://twitter.com/edge">John Brockman</a></cite></small></footer>
                 </blockquote>
                 <p class="uk-text-right uk-text-meta"><small>Made with ❤ by <a href="https://github.com/2PacIsAlive">Jared Jolton</a></small></p>
             </div>
