--- a/www/templates/events.html
+++ b/www/templates/events.html
@@ -34,6 +34,7 @@
 								pos: 'top-right',
 								timeout: 5000
 							});
+							$('#trainer-button').text("Train " + $('#network-name').val());
 							$('#trainer-button-section').slideDown("slow");
 						},
 						400: function(data) {
