--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -18,7 +18,9 @@
                             "but ^<strong>more fun</strong>.",
                             "with ^<strong>less work</strong>.",
                             "made ^<strong>sexier</strong>.",
-                            "with ^<strong>more abstraction</strong>."
+                            "^<strong>abstracted</strong>.",
+                            "at ^<strong>your fingertips</strong>.",
+                            "for ^<strong>lung cancer research</strong>."
                         ],
                         typeSpeed: 85,
                         backSpeed: 20,
@@ -50,6 +52,9 @@
                     <p class="uk-margin-small-bottom"><small>I can answer the question, but am I bright enough to ask it?</small></p>
                     <footer><small><cite><a href="https://twitter.com/edge">John Brockman</a></cite></small></footer>
                 </blockquote>
+                <div class="uk-text-center">
+                    <a href="#" uk-totop uk-scroll></a>
+                </div>
                 <p class="uk-text-right uk-text-meta"><small>Made with ❤ by <a href="https://github.com/2PacIsAlive">Jared Jolton</a></small></p>
             </div>
         </div>
