--- a/www/templates/network.html
+++ b/www/templates/network.html
@@ -4,7 +4,7 @@
 		<form>
 			<fieldset class="uk-fieldset">
 				<h1 id="network-legend" class="uk-legend"></h1>
-				<div class="uk-margin">
+				<div class="uk-margin uk-text-center">
 					<label class="uk-form-label" for="network-name">Network Name:</label>
 					<div class="uk-form-controls">
 						<input id="network-name" class="uk-input uk-form-width-medium" type="text" placeholder="">
@@ -16,13 +16,13 @@
 	</div>
 	<div class="uk-child-width-1-2@s" uk-grid>
 		<div>
-			<h4 class="uk-text-center">Layers</h4>
+			<h4 class="uk-text-center uk-text-lead">Layers</h4>
 			<div id="layer-group" uk-sortable="group: sortable-group">
 
 			</div>
 		</div>
 		<div>
-			<h4 class="uk-text-center">Network</h4>
+			<h4 class="uk-text-center uk-text-lead">Network</h4>
 			<div id="network-group" uk-sortable="group: sortable-group">
 
 			</div>
