--- a/www/templates/train.html
+++ b/www/templates/train.html
@@ -26,6 +26,9 @@
                     <p class="uk-margin-small-bottom"><small>I can answer the question, but am I bright enough to ask it?</small></p>
                     <footer><small><cite><a href="https://twitter.com/edge">John Brockman</a></cite></small></footer>
                 </blockquote>
+                <div class="uk-text-center">
+                    <a href="#" uk-totop uk-scroll></a>
+                </div>
             </div>
         </div>
     </body>
